Fix-22668 Glossary term missing from UI in columns search (#22764)
* Fix-22668 Glossary term missing from UI in columns searching

* add test